--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - ChrisplayzBLOX/YT'S weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="John Doe">
+
+    <audio src="/sound/Wii Shop Channel - Loading Sound HD.mp3" id="loadingsound" loop="" preload></audio>
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/js/main.js"></script>
     <audio src="/bgm/Initial Setup - Mii Maker - Nintendo Wii U System OST.mp3" autoplay="" loop=""></audio>
-     <audio src="/sound/Wii Shop Channel - Loading Sound HD.mp3" id="loadingsound" loop="" preload></audio>
 </head>
+
 <body onload="onload();">
     <div id="loadicon" style="display:none;"  >
         <img src="/images/ring.png" style="display:flex; margin-top:2px; width:90px; height:90px;" id="wiiring" alt="">
