--- a/404.html
+++ b/404.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - ChrisplayzBLOX/YT'S weblinks</title>
+    <title>404 - ChrisplayzBLOX/YT'S weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="John Doe">
+
+    <audio src="/sound/Wii Shop Channel - Loading Sound HD.mp3" id="loadingsound" loop="" preload></audio>
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/js/main.js"></script>
     <audio src="/sound/wiishopsounds/8.wav" autoplay="" ></audio>
-     <audio src="/sound/Wii Shop Channel - Loading Sound HD.mp3" id="loadingsound" loop="" preload></audio>
 </head>
+
 <body onload="onload();">
     <div id="loadicon" style="display:none;" >
         <img src="/images/ring.png" style="display:flex; margin-top:2px; width:90px; height:90px;" id="wiiring" alt="">
