--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <audio src="/bgm/Initial Setup - Mii Maker - Nintendo Wii U System OST.mp3" autoplay="" loop=""></audio>
 </head>
 
-<body onload="onload();">
+<body onload="onload();" style="overflow-x: scroll; ">
     <div id="loadicon" style="display:none;"  >
         <img src="/images/ring.png" style="display:flex; margin-top:2px; width:90px; height:90px;" id="wiiring" alt="">
         </div>
