--- a/404.html
+++ b/404.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - ChrisplayzBLOX/YT'S weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
-    <meta name="description" content="Free Web tutorials">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="John Doe">
+    <meta name="description" content="ChrisplayzYT/BLOX's website. links, information and more!">
+    <meta name="keywords" content="ChrisplayzYT/BLOX's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzBLOX/YT">
+    <meta name="author" content="ChrisplayzYT/BLOX">
 
     <audio src="/sound/Wii Shop Channel - Loading Sound HD.mp3" id="loadingsound" loop="" preload></audio>
     <link rel="stylesheet" href="/styles/main.css">
