--- a/404.html
+++ b/404.html
@@ -13,6 +13,7 @@
     <audio src="/sound/Wii Shop Channel - Loading Sound HD.mp3" id="loadingsound" loop="" preload></audio>
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/js/main.js"></script>
+    <link rel="stylesheet" href="/wiishopscrollbar/wiiscrollbar.css">
     <audio src="/sound/wiishopsounds/8.wav" autoplay="" ></audio>
 </head>
 
