--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <audio src="/sound/Wii Shop Channel - Loading Sound HD.mp3" id="loadingsound" loop="" preload></audio>
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/js/main.js"></script>
+    <link rel="stylesheet" href="/wiishopscrollbar/wiiscrollbar.css">
     <audio src="/bgm/Initial Setup - Mii Maker - Nintendo Wii U System OST.mp3" autoplay="" loop=""></audio>
 </head>
 
-<body onload="onload();" style="overflow-y:scroll;">
+<body onload="onload();" style="overflow-y:scroll;" >
     <div id="loadicon" style="display:none;"  >
         <img src="/images/ring.png" style="display:flex; margin-top:2px; width:90px; height:90px;" id="wiiring" alt="">
         </div>
