--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/js/main.js"></script>
     <link rel="stylesheet" href="/wiishopscrollbar/wiiscrollbar.css">
-    <audio src="/bgm/Initial Setup - Mii Maker - Nintendo Wii U System OST.mp3" autoplay="" loop=""></audio>
+    <audio src="/bgm/Menu - Club Nintendo 04 Catalog GCN.wav" id="BGM" autoplay="" loop="" preload></audio>
 </head>
 
-<body onload="onload();" style="overflow-y:scroll;" >
+<body onload="onload();">
     <div id="loadicon" style="display:none;"  >
         <img src="/images/ring.png" style="display:flex; margin-top:2px; width:90px; height:90px;" id="wiiring" alt="">
         </div>
