--- a/404.html
+++ b/404.html
@@ -17,7 +17,10 @@
     <audio src="/sound/wiishopsounds/8.wav" autoplay="" ></audio>
 </head>
 
-<body onload="onload();">
+<body >
+    <img src="/images/background/bluelinebordr.png" id="borderleft" alt="">
+    <img src="/images/background/bluelinebordr.png" id="borderright" alt="">
+
     <div id="loadicon" style="display:none;" >
         <img src="/images/ring.png" style="display:flex; margin-top:2px; width:90px; height:90px;" id="wiiring" alt="">
         </div>
@@ -29,4 +32,6 @@
         <a href="index.html">
         <button onclick="initloading();" onmouseover="wiihover();">Back</button>
     </a>
+    <br><br>
+    
     </div>
