--- a/credits.html
+++ b/credits.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - ChrisplayzBLOX/YT'S weblinks</title>
+    <title>Credits - ChrisplayzBLOX/YT'S weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
     <meta name="description" content="ChrisplayzYT/BLOX's website. links, information and more!">
     <meta name="keywords" content="ChrisplayzYT/BLOX's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzBLOX/YT">
@@ -29,7 +29,7 @@
         margin:auto;
     }
 </style>
-<body style="background-color:black; color:white; overflow-y:scroll;" >
+<body  onload="stoploading();" style="background-color:black; color:white; overflow-y:scroll;" >
 
     <div id="loadicon" style="display:none;" >
         <img src="/images/ring.png" style="display:flex; margin-top:2px; width:90px; height:90px;" id="wiiring" alt="">
