--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <audio src="/sound/wiishopsounds/12.wav" autoplay="" ></audio>
 </head>
 
-<body onload="onload();">
+<body onload="stoploading();">
     <img src="/images/background/bluelinebordr.png" id="borderleft" alt="">
     <img src="/images/background/bluelinebordr.png" id="borderright" alt="">
 
