--- a/oldwsvids.html
+++ b/oldwsvids.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - ChrisplayzBLOX/YT'S weblinks</title>
+    <title>Old Wii Shop videos - ChrisplayzBLOX/YT'S weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
     <meta name="description" content="ChrisplayzYT/BLOX's website. links, information and more!">
     <meta name="keywords" content="ChrisplayzYT/BLOX's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzBLOX/YT">
@@ -23,7 +23,7 @@
     </style>
 </head>
 
-<body onload="onload();">
+<body onload="stoploading();">
     <img src="/images/background/bluelinebordr.png" id="borderleft" alt="">
     <img src="/images/background/bluelinebordr.png" id="borderright" alt="">
 
