made videos more responsive

--- a/oldreviivevids.html
+++ b/oldreviivevids.html
@@ -36,7 +36,7 @@
 
         <h1 style="font-weight:bolder;">My playlist of old Reviive Shop videos before the shutdown:</h1>
 
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=uT5PF5BDnn0CED7s&amp;list=PLMN56JtSJ0rEG-_V12YwvseIjJk0qmUiT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe  style="width:90%; height:360px; " src="https://www.youtube-nocookie.com/embed/videoseries?si=uT5PF5BDnn0CED7s&amp;list=PLMN56JtSJ0rEG-_V12YwvseIjJk0qmUiT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <br>
     <a target="_blank" onclick="initloading();" onmouseover="wiihover();" href="https://youtube.com/playlist?list=PLMN56JtSJ0rEG-_V12YwvseIjJk0qmUiT&si=CbzQ4qW6W2l9i1Jo">View the full playlist here</a>
     <br><br>
