--- a/oldwsvids.html
+++ b/oldwsvids.html
@@ -36,7 +36,7 @@
 
         <h1 style="font-weight:bolder;">My playlist of old Wii Shop Channel videos:</h1>
 
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=X45q30T1RZJpwb-I&amp;list=PLMN56JtSJ0rHWwCzFJqP-N3HQrg0MguKJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe style="width:90%; height:360px; " src="https://www.youtube-nocookie.com/embed/videoseries?si=X45q30T1RZJpwb-I&amp;list=PLMN56JtSJ0rHWwCzFJqP-N3HQrg0MguKJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <br>
     <a target="_blank" onclick="initloading();" onmouseover="wiihover();" href="https://youtube.com/playlist?list=PLMN56JtSJ0rHWwCzFJqP-N3HQrg0MguKJ&si=CBzupVGLtuWym7Y1">View the full playlist here</a>
     <br><br>
