--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         
 
-    <div id="details" style="text-align:center;" >
+    <div id="details" style="text-align:center; overflow:hidden; max-width:900px; " >
 <img src="/images/chrisplayzpfp.svg" style="border-radius:6px; width:80px; height:80px;" alt="">
         <h1 style="font-weight:bolder;">Welcome to ChrisplayzBLOX/YT's Website!</h1>
         <h3>here are some things you should check out:</h3>
