added a lil globe function

--- a/oldreviivevids.html
+++ b/oldreviivevids.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 
-<body onload="stoploading();">
+<body  id="mainpg" onload="stoploading();">
     <img src="/images/background/bluelinebordr.png" id="borderleft" alt="">
     <img src="/images/background/bluelinebordr.png" id="borderright" alt="">
 
