--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
     <audio src="/sound/wiishopsounds/8.wav" autoplay="" ></audio>
 </head>
 
-<body  onload="stoploading();" >
+<body  id="mainpg"  onload="stoploading();" >
     <img src="/images/background/bluelinebordr.png" id="borderleft" alt="">
     <img src="/images/background/bluelinebordr.png" id="borderright" alt="">
 
