--- a/forecast.html
+++ b/forecast.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en" id="page">
 <head>
+    <audio src="/sound/globe/error.wav" autoplay="" ></audio>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Globe - ChrisplayzBLOX/YT'S weblinks</title>
@@ -15,7 +16,7 @@
     <script src="/js/main.js"></script>
     <script src="/js/globe.js"></script>
     <link rel="stylesheet" href="/wiishopscrollbar/wiiscrollbar.css">
-    <audio src="/bgm/globe/Globe Forecast (Night) Forecast Channel.mp3" autoplay="" loop="" ></audio>
+
     <style>
         * {
             transition:0s;
@@ -26,13 +27,13 @@
             color:white;
             width:100%;
             height:100%;
+            overflow:hidden;
         }
         #details {
             background-color:black;
             color:white;
             background-image:url("/images/globe/stars.png");
             background-size:auto;
-            opacity:100%;
             transition:.3s ease-in-out;
         }
         #globe:active {
@@ -98,8 +99,12 @@
 
 <body  id="mainpg" onload="stoploading();">
 
+    <div id="warning" onclick="removewarning();" style="display:none; z-index:5px; opacity:100%;  transition:.3s ease-in-out; display:block; position:absolute; top:0; left:0; width:100%; height:100%; display:block; ">
 
-    <div id="details" style=" max-width:100%; height:100%; width:100%; position:absolute; top:0; left:0;">
+        <p style="color:red; font-weight:bold; font-size:20px; text-align:center; margin-top:48%;">WARNING: this part of the website isn't 100% made for mobile, some glitches/bugs can occur. <br><br>Click to continue.</p>
+    </div>
+
+    <div id="details" style="display:none; opacity:0%; max-width:100%; height:100%; width:100%; position:absolute; top:0; left:0;">
         <img src="/images/globe/weathernewswatermark.png" style="position:absolute; left:8%; bottom:120px; width:230; height:auto;" alt="">
                 <img src="/images/globe/globee.PNG" onclick="" onmouseup="globesound();" style="width:577px; height:45%; border-radius:950px; display:block;max-width:60%; margin:auto; position:absolute; left:20%; right:20%; bottom:50%; top:50%;" id="globe" alt="">
         
