--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/js/main.js"></script>
     <link rel="stylesheet" href="/wiishopscrollbar/wiiscrollbar.css">
-    <audio src="/sound/wiishopsounds/8.wav" autoplay="" ></audio>
+    <audio src="/sound/channelpre.wav" autoplay="" ></audio>
 </head>
 
 <body  id="mainpg"  onload="stoploading();" >
@@ -27,11 +27,34 @@
         
 
     <div id="details" >
-        <h2>wuh woh 404 not found</h2>
+        <img src="/images/icons/marioconfused.png" style="max-height:150px;" alt="">
+        <h2>Mama Mia! Mario couldn't find that page.</h2>
+        <h4>404 | Page not Found</h4>
         <br>
-        <a href="index.html">
-        <button onclick="initloading();" onmouseover="wiihover();">Back</button>
-    </a>
+        <button onclick="gobackhome();" onmouseover="wiihover();">Go to the home page</button>
+        <br><br>
+        <button onclick="goback();" onmouseover="wiihover();">Go back to the previous page</button>
+
+        <script>
+            function gobackhome() {
+                initloading();
+                var gobak = new Audio("/sound/wiishopsounds/4.wav");
+                gobak.play();
+                setTimeout(redirectt,600);
+            }
+            function redirectt() {
+                window.location.href="index.html";
+            }
+            function redirectt2() {
+                window.location.href="javascript:history.back(1);";
+            }
+            function goback() {
+                initloading();
+                var gobak = new Audio("/sound/wiishopsounds/4.wav");
+                gobak.play();
+                setTimeout(redirectt2,600);
+            }
+        </script>
     <br><br>
     
     </div>
