--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/js/main.js"></script>
     <link rel="stylesheet" href="/wiishopscrollbar/wiiscrollbar.css">
-    <audio src="/sound/channelpre.wav" autoplay="" ></audio>
+    <audio src="/sound/ohno.mp3" autoplay="" ></audio>
 </head>
 
 <body  id="mainpg"  onload="stoploading();" >
