upd credit music to a calmer theme

--- a/credits.html
+++ b/credits.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/js/main.js"></script>
     <link rel="stylesheet" href="/wiishopscrollbar/wiiscrollbar.css">
-     <audio src="/bgm/Mario Kart Wii True Ending Credits 1080p HD.mp3" id="BGM" autoplay="" loop="" preload></audio>
+     <audio src="/bgm/Mario Paint Music - BGM 3.mp3" id="BGM" autoplay="" loop="" preload></audio>
 </head>
 <style>
     * {
@@ -49,7 +49,7 @@
 
             
             <h2 style="font-weight:bold; margin-top:30px; margin-bottom:30px;">
-                <a href="https://www.spriters-resource.com/wii/forecastchannel/" onclick="initloading();" onmouseover="wiihover();" target="_blank">larsenv on Spriters resource</a> for the forcast channel buttons</h2>
+                <a href="https://www.spriters-resource.com/wii/forecastchannel/" onclick="initloading();" onmouseover="wiihover();" target="_blank">larsenv on Spriters resource</a> for the forecast channel buttons</h2>
 
             <h2 style="font-weight:bold; margin-top:30px; margin-bottom:30px;">
                 <a href="https://stackoverflow.com/a/52361343" onclick="initloading();" onmouseover="wiihover();" target="_blank">Darth Veyda on stackoverflow</a> for info on how to create custom arrow buttons for scrollbar.</h2>
