--- a/404.html
+++ b/404.html
@@ -15,6 +15,11 @@
     <script src="/js/main.js"></script>
     <link rel="stylesheet" href="/wiishopscrollbar/wiiscrollbar.css">
     <audio src="/sound/ohno.mp3" autoplay="" ></audio>
+    <style>
+        #details {
+    margin-top:10%;
+}
+</style>
 </head>
 
 <body  id="mainpg"  onload="stoploading();" >
