--- a/oldreviivevids.html
+++ b/oldreviivevids.html
@@ -20,6 +20,9 @@
             border:1px solid #34BEED;
             border-radius:3px;
         }
+        #details {
+        margin-top:10%;
+    }
     </style>
 </head>
 
