--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
 <div id="globetrans">
 </div>
 <style>
-    body {
-        overflow:hidden;
-    }
     #globetrans {
         background-image:url("/images/globe/GLOBE-TXT.png");
         background-repeat:no-repeat;
@@ -32,6 +29,9 @@
         background-color:black; position:absolute; width:100%; height:100%;
         display:none;
         
+    }
+    #details {
+        margin-top:10%;
     }
 </style>
 
