--- a/ro2012/ROBLOX.html
+++ b/ro2012/ROBLOX.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Games at ROBLOX.com - Ro2012</title>
-    <link rel="shortcut icon" href="/R.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/stylesofROBLOX.css">
+    <link rel="shortcut icon" href="R.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/stylesofROBLOX.css">
 </head>
 <body>
     <style>
         #box01 {
-            background: url("/images/standardBox_01_bkg.png") top repeat-x #fff;
+            background: url("images/standardBox_01_bkg.png") top repeat-x #fff;
             border: 1px solid #aaa;
             padding-bottom:8px;
             border: 1px solid rgba(185, 184, 184, 0.932);
@@ -24,7 +24,7 @@
     </style>
 
     <div id="maincontent">
-        <img id="bnrontop" src="/images/head_03.jpg" loading="lazy">
+        <img id="bnrontop" src="images/head_03.jpg" loading="lazy">
 <a href="ROBLOX.html" style="position:absolute;  left:445px; top:76px; width:350px; height:100px;"></a>
 
          <div id="bnrnav" style=" width:100%; height:30px; margin-top:-3px;">
@@ -95,7 +95,7 @@
 
                           <br><br>
                           <a href="#">
-                          <img src="/images/fsignin.png"  loading="lazy" alt="" style="margin-left:5px;">
+                          <img src="images/fsignin.png"  loading="lazy" alt="" style="margin-left:5px;">
                         </a>
 </form>
 
@@ -107,7 +107,7 @@
     <!-- 97dyt7MXWpo -->
     
     <div id="giantplaybtn" style="display:inline-block; margin-left:80px; position:relative; top:-60px; ">
-        <img src="/images/playNow01.png" alt="" style="max-width:190px; margin-top:15px; ">
+        <img src="images/playNow01.png" alt="" style="max-width:190px; margin-top:15px; ">
        </div>
 
 
@@ -126,7 +126,7 @@
 
 <div id="box01" style="padding-bottom:30px; padding-left:5px; width:555px;">
 <a href="#">
-    <img src="/images/PlayNow3.png" loading="lazy" alt="" >
+    <img src="images/PlayNow3.png" loading="lazy" alt="" >
 </a>
 <div id="box02" style="width:450px; margin-left:30px; position:relative; top:-5px; height:18px; padding-bottom:8px; padding-top:5px;  text-align:center; font-size:17px;">
     <span style="font-size: 12px;
@@ -139,8 +139,8 @@
 <div id="box02" style="width:500px; margin-left:0px; height:210px; padding:3px; font-size:17px;">
     <a href="game.html">
 
-    <img src="/images/pirateslifethumbnail.png" loading="lazy" alt="" style="width:375px; height:200px;  display:inline-block;">
-    <img src="/images/PlayThis.png" alt="" style="position:relative; top:-160px; left:10px; display:inline-block;">
+    <img src="images/pirateslifethumbnail.png" loading="lazy" alt="" style="width:375px; height:200px;  display:inline-block;">
+    <img src="images/PlayThis.png" alt="" style="position:relative; top:-160px; left:10px; display:inline-block;">
 </a>
     <span style="font-weight:normal; font-size:11px; display:inline-block; position:relative; top:-170px; left:383px; color:black;">
 &nbsp;Updated:</span>
@@ -161,7 +161,7 @@
         <span style="font-weight:bold; font-size:12px; display:inline-block; position:relative; top:-193px; left:383px; color:black;">
     &nbsp;&nbsp;3,304,796 times</span>
 <br>
-    <img src="/images/piratelifemaker.png" loading="lazy" alt="lando64000" style="position:relative; top:-197px; left:390px; height:70px; width:90px;">
+    <img src="images/piratelifemaker.png" loading="lazy" alt="lando64000" style="position:relative; top:-197px; left:390px; height:70px; width:90px;">
     <br>
     <span style="font-weight:bold; font-size:11px; display:inline-block; position:relative; top:-210px; left:383px; color:black;">
 &nbsp;&nbsp;<span style="font-weight:normal;">By:</span> <a href="#">lando64000</a></span>
@@ -173,12 +173,12 @@
 
 <style>
 #giftcardpromo {
-background-image:url("/images/btn-get_gift_card.jpg");
+background-image:url("images/btn-get_gift_card.jpg");
 width:560px;
 height:90px;
 }
 #giftcardpromo:hover {
-background-image:url("/images/btn-get_gift_card.jpg");
+background-image:url("images/btn-get_gift_card.jpg");
 background-position-y:90px;
 }
 </style>
@@ -188,7 +188,7 @@ background-position-y:90px;
     #boxhdr {
         width: 100%;
     height: 29px;
-    background: url("/images/tab_black_33h_t2.png") no-repeat right top;
+    background: url("images/tab_black_33h_t2.png") no-repeat right top;
     overflow: hidden;
     height: 26px;
     padding: 7px 4px 0 3px;
