--- a/ro2012/404.html
+++ b/ro2012/404.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Ro2012</title>
     <link rel="shortcut icon" href="/R.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/stylesofROBLOX.css">
-    <audio src="https://www.myinstants.com/media/sounds/roblox-death-sound_1.mp3" autoplay=""></audio>
+    <link rel="stylesheet" href="styles/stylesofROBLOX.css">
 </head>
 <body>
 
