--- a/ro2012/ROBLOX.html
+++ b/ro2012/ROBLOX.html
@@ -6,6 +6,7 @@
     <title>Free Games at ROBLOX.com - Ro2012</title>
     <link rel="shortcut icon" href="R.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/stylesofROBLOX.css">
+    <audio src="bgm/Runaway - Drury Graham.mp3" autoplay="" ></audio>
 </head>
 <body>
     <style>
