--- a/forecast.html
+++ b/forecast.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <audio src="/bgm/globe/Globe Forecast (Night) Forecast Channel.mp3" autoplay="" ></audio>
+    <audio src="/bgm/globe/Globe Forecast (Night) Forecast Channel.mp3" autoplay="" loop="" ></audio>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Globe - ChrisplayzBLOX/YT'S weblinks</title>
@@ -123,6 +123,7 @@
 
 
     <div id="details" style="max-width:100%; height:100%; width:100%; position:absolute; top:0; left:0;">
+        <p style="color:white; "></p>
         <div id="controlsmenu" style="visibility:hidden; opacity:0%;" onclick="hidecontrols();">
             <img src="/images/globe/controlsbanner.png" style=" width:630px; height:230px;">
             <h3 style="position:fixed; margin-top:-180px; font-size:23px;">Controls:</h3>
@@ -130,7 +131,6 @@
             <li style="position:fixed; margin-top:-30px; font-size:23px;">down arrow to zoom out</li>
             <li style="position:fixed; margin-top:30px; font-size:23px;">left arrow to warp left </li>
             <li style="position:fixed; margin-top:85px; font-size:23px;">right arrow to warp right </li>
-            <li style="position:fixed; margin-top:146px; font-size:23px;">enter key to restore globe </li>
         </div>
 
 <div id="mainglobe" style="z-index:6px; position:absolute; top:0; left:0; width:100%; height:100%;">
@@ -155,4 +155,4 @@
                 </div>
 
 
-                </div>
+                </div> 
