--- a/forecast.html
+++ b/forecast.html
@@ -29,12 +29,16 @@
             height:100%;
             overflow:hidden;
         }
+        #mainpg {
+            overflow:hidden;
+        }
         #details {
             background-color:black;
             color:white;
             background-image:url("/images/globe/stars.png");
             background-size:auto;
             transition:.3s ease-in-out;
+            overflow:hidden;
         }
         #globe:active {
             cursor: url("/images/wiicursorremake_grab.png"), auto;
