added a lil wii font

--- a/credits.html
+++ b/credits.html
@@ -62,7 +62,7 @@
             
 
                 <h2 style="font-weight:bold; margin-top:30px; margin-bottom:30px;">
-                    <a href="https://www.youtube.com/@NathanBoehm" onclick="initloading();" onmouseover="wiihover();" target="_blank">Nathan Boehem</a> for the Wii Shop scrollbar arrows from 
+                    <a href="https://www.youtube.com/@NathanBoehm" onclick="initloading();" onmouseover="wiihover();" target="_blank">Nathan Boehem</a> for the Wii Shop scrollbar arrows & Wii Shop/Wii font from 
                     <a href="https://wiishopchannel.net" onclick="initloading();" onmouseover="wiihover();"  target="_blank">https://wiishopchannel.net</a>.</h2>
             
 
