--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
             </div>
 
             <div id="box" style="padding-left:3px; border-bottom:1px solid grey; margin-top:5px; display:block;">
-                <img src="/images/icons/120px-SMB_Wonder_Life_Mario.png" style="  border-radius:15px;  position:relative; top:0px; display:inline-block; width:40px; height:40px; max-width:40px; max-height:40px;" alt="">
+                <img src="/images/background/bluelinebordr.png" style="  border-radius:15px;  position:relative; top:0px; display:inline-block; width:40px; height:40px; max-width:40px; max-height:40px;" alt="">
     
-         <a href="https://www.youtube.com/watch?v=xSYA7sqsEIA&t=0s" target="_blank"  onclick="initloading();" onmouseover="wiihover();" style="position:relative; top:-12px; left:3px;">
-                My favorite song from Mario Wonder: Wonder Flower (Going Up) </a>
+         <a href="/shoppingguide/startup.html" target="_blank"  onclick="initloading();" onmouseover="wiihover();" style="position:relative; top:-12px; left:3px;">
+                View my archive of the Wii Shop Channel's Shopping Guide</a>
     
             </div>
 
