--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div id="box" style="padding-left:3px; border-bottom:1px solid grey; margin-top:5px; display:block;">
                 <img src="/images/icons/R.png" style="  border-radius:15px;  position:relative; top:0px; display:inline-block; width:40px; height:40px; max-width:40px; max-height:40px;" alt="">
     
-         <a href="/ro2012/ROBLOX.html"  onclick="initloading();" onmouseover="wiihover();" style="position:relative; top:-12px; left:3px;">
+         <a href="/ro2012/"  onclick="initloading();" onmouseover="wiihover();" style="position:relative; top:-12px; left:3px;">
             ROBLOX 2012 website first page remake i guess <small>(kinda bugged out)</small>
                 </a>
     
