--- a/index.html
+++ b/index.html
@@ -82,8 +82,11 @@
             <div id="box" style="padding-left:3px; border-bottom:1px solid grey; margin-top:5px; display:block;">
                 <img src="/images/icons/globethumb.png" style="  border-radius:15px;  position:relative; top:0px; display:inline-block; width:40px; height:40px; max-width:40px; max-height:40px;" alt="">
     
-         <a href="/forecastchannel/index.html"  onclick="initloading();" onmouseover="wiihover();" style="position:relative; top:-12px; left:3px;">
-                My fav preinstalled wii channel (besides wiishop/mii): Forecast Channel! <small>(click for sum magik)</small></a>
+         <a href="404.html"  onclick="initloading();" onmouseover="wiihover();" style="position:relative; top:-12px; left:3px;">
+                My fav preinstalled wii channel (besides wiishop/mii): Forecast Channel! <small>(click for sum magik)</small>
+         <br>
+         <small><small>THIS FEATURE ISN'T DONE</small></small>
+         </a>
             </div>
 
 
