--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <meta name="description" content="ChrisplayzYT/BLOX's website. links, information and more!">
     <meta name="keywords" content="ChrisplayzYT/BLOX's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzBLOX/YT">
     <meta name="author" content="ChrisplayzYT/BLOX">
-
-    <audio src="/sound/Wii Shop Channel - Loading Sound HD.mp3" id="loadingsound" loop="" preload></audio>
     <link rel="stylesheet" href="/wiishopscrollbar/wiiscrollbar.css">
     <audio src="/bgm/Course World.mp3" autoplay="" ></audio>
 </head>
@@ -52,7 +50,7 @@ body {
 
 }
 #mainpg {
-    background-color:white;
+    background-color:black;
     color:#323232;
 }
 #borderleft {
