--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
 }
 #mainpg {
     background-color:black;
-    color:#323232;
+    color:white;
 }
 #borderleft {
     position:absolute; top:0px; left:1.3%; z-index:-3px; width:13px; height:100%;
