--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
     font-family: 'Wii NTLG PGothic JPN Regular';
     src: url(/font/font2.ttf);
   }
+::selection {
+  color: #323232;
+  background: skyblue;
+}
+::-moz-selection {
+  color: #323232;
+  background: skyblue;
+}
 
+	
 body {
     margin-top:8px;
     overflow-x: hidden; 
