--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   }
 ::selection {
   color: #323232;
-  background: skyblue;
+  background: #34BEED;
 }
 ::-moz-selection {
   color: #323232;
-  background: skyblue;
+  background:#34BEED;
 }
 
 	
