--- a/404.html
+++ b/404.html
@@ -39,7 +39,14 @@
     font-family: 'Wii NTLG PGothic JPN Regular';
     src: url(/font/font2.ttf);
   }
-
+::selection {
+  color: #323232;
+  background: #34BEED;
+}
+::-moz-selection {
+  color: #323232;
+  background:#34BEED;
+}
 body {
     margin-top:8px;
     overflow-x: hidden; 
