--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="keywords" content="ChrisplayzYT/BLOX's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzBLOX/YT">
     <meta name="author" content="ChrisplayzYT/BLOX">
 
+    <meta property="og:image" content="/chris.png" />
+    <meta property="og:image:width" content="80" />
+    <meta property="og:image:height" content="80" />
     <audio src="/sound/Wii Shop Channel - Loading Sound HD.mp3" id="loadingsound" loop="" preload></audio>
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/js/main.js"></script>
