--- a/404.html
+++ b/404.html
@@ -9,6 +9,9 @@
     <meta name="description" content="ChrisplayzYT/BLOX's website. links, information and more!">
     <meta name="keywords" content="ChrisplayzYT/BLOX's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzBLOX/YT">
     <meta name="author" content="ChrisplayzYT/BLOX">
+    <meta property="og:image" content="/chris.png" />
+    <meta property="og:image:width" content="80" />
+    <meta property="og:image:height" content="80" />
     <link rel="stylesheet" href="/wiishopscrollbar/wiiscrollbar.css">
     <audio src="/bgm/Course World.mp3" autoplay="" ></audio>
 </head>
