--- a/workinprog.html
+++ b/workinprog.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/js/main.js"></script>
     <link rel="stylesheet" href="/wiishopscrollbar/wiiscrollbar.css">
-    <audio src="/sound/ohno.mp3" autoplay="" ></audio>
+    <audio src="/sound/wiishopsounds/13.wav" autoplay="" ></audio>
     <style>
         #details {
     margin-top:10%;
@@ -33,8 +33,8 @@
 
     <div id="details" >
         <img src="/images/icons/marioconfused.png" style="max-height:150px;" alt="">
-        <h2>Mama Mia! Mario couldn't find that page.</h2>
-        <h4>404 | Page not Found</h4>
+        <h2>My Wii Forecast Channel remake is currently a work in progress.</h2>
+        <h4>Check back later!</h4>
         <br>
         <button onclick="gobackhome();" onmouseover="wiihover();">Go to the home page</button>
         <br><br>
