--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - ChrisplayzBLOX/YT & larsenv</title>
+    <title>Home - ChrisplayzBLOX/YT's weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
     <meta name="description" content="ChrisplayzYT/BLOX's website. links, information and more!">
     <meta name="keywords" content="ChrisplayzYT/BLOX's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzBLOX/YT">
     <meta name="author" content="ChrisplayzYT/BLOX">
 
+    <meta property="og:image" content="/chris.png" />
+    <meta property="og:image:width" content="80" />
+    <meta property="og:image:height" content="80" />
     <audio src="/sound/Wii Shop Channel - Loading Sound HD.mp3" id="loadingsound" loop="" preload></audio>
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/js/main.js"></script>
