--- a/credits.html
+++ b/credits.html
@@ -35,14 +35,14 @@
         background-image:url("/images/68879.png");
     }
 </style>
-<body  id="mainpg" onload="stoploading();" style="background-color:black; color:white; overflow-y:scroll;" >
+<body  id="mainpg" onload="stoploading();" style="background-color:rgb(17, 17, 17); color:white; overflow-y:scroll;" >
 
     <div id="loadicon" style="display:none;" >
         <img src="/images/ring.png" style="display:flex; margin-top:2px; width:90px; height:90px;" id="wiiring" alt="">
         </div>
         
 
-    <div id="details" style="height:99vh;  overflow:hidden;" >
+    <div id="details" style="height:99vh; padding-bottom:10px;  overflow:hidden;" >
         <h1>Credits</h1>
         <hr>
     <marquee direction="down"  behavior="slide"   scrollamount="3" style="height:100%; text-align:center;">
