--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div id="box" style="padding-left:3px; border-bottom:1px solid grey; margin-top:5px; display:block;">
                 <img src="/images/icons/betastartupwii.png" style="  border-radius:15px;  position:relative; top:0px; display:inline-block; width:40px; height:40px; max-width:40px; max-height:40px;" alt="">
     
-         <a href="https://betawii.github.io/betawii/" target="_blank" title="Old Beta Wii Video archive!1!1"  onclick="initloading();" onmouseover="wiihover();" style="position:relative; top:-12px; left:3px;">
+         <a href="https://betawii.github.io/" target="_blank" title="Old Beta Wii archive!1!1"  onclick="initloading();" onmouseover="wiihover();" style="position:relative; top:-12px; left:3px;">
                 Check out my archive of old Wii Beta Content from 2006!</a>
     
             </div>
