--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChrisplayzBLOX/YT's weblinks</title>
+    <title>ChrisplayzWii's weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
     <meta name="description" content="ChrisplayzYT/BLOX's website. links, information and more!">
-    <meta name="keywords" content="ChrisplayzYT/BLOX's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzBLOX/YT">
+    <meta name="keywords" content="ChrisplayzYT/BLOX's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzWii">
     <meta name="author" content="ChrisplayzYT/BLOX">
 
     <meta property="og:image" content="/chris.png" />
@@ -54,7 +54,7 @@
     <div id="details" style="text-align:center; overflow:hidden; max-width:900px; " >
 <img src="/images/icons/chrisplayzpfp.svg" style="border-radius:6px; width:80px; height:80px;" alt="">
 <div id="txttop">
-        <h1 style="font-weight:bolder;">Welcome to ChrisplayzBLOX/YT's Website!</h1>
+        <h1 style="font-weight:bolder;">Welcome to ChrisplayzWii's Website!</h1>
         <h3>here are some things you should check out:</h3>
     </div>
 
