--- a/oldwsvids.html
+++ b/oldwsvids.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Old Wii Shop videos - ChrisplayzBLOX/YT'S weblinks</title>
+    <title>Old Wii Shop videos - ChrisplayzWii/YT'S weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
     <meta name="description" content="ChrisplayzYT/BLOX's website. links, information and more!">
-    <meta name="keywords" content="ChrisplayzYT/BLOX's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzBLOX/YT">
+    <meta name="keywords" content="ChrisplayzYT/BLOX's website, ChrisplayzWii, ChrisplayzYT, ChrisplayzWii/YT">
     <meta name="author" content="ChrisplayzYT/BLOX">
 
     <meta property="og:image" content="/chris.png" />
