--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChrisplayzBLOX/YT'S weblinks</title>
+    <title>ChrisplayzWii'S weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
-    <meta name="description" content="ChrisplayzYT/BLOX's website. links, information and more!">
-    <meta name="keywords" content="ChrisplayzYT/BLOX's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzBLOX/YT">
-    <meta name="author" content="ChrisplayzYT/BLOX">
+    <meta name="description" content="ChrisplayzWii's website. links, information and more!">
+    <meta name="keywords" content="ChrisplayzWii's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzWii">
+    <meta name="author" content="ChrisplayzWii">
     <meta property="og:image" content="/chris.png" />
     <meta property="og:image:width" content="80" />
     <meta property="og:image:height" content="80" />
