--- a/404.html
+++ b/404.html
@@ -51,7 +51,7 @@
                 setTimeout(redirectt,600);
             }
             function redirectt() {
-                window.location.href="index.html";
+                window.location.href="https://chrisplayzyt.github.io/index.html";
             }
             function redirectt2() {
                 window.location.href="javascript:history.back(1);";
