--- a/404.html
+++ b/404.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChrisplayzWii'S weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
-    <meta name="description" content="ChrisplayzBLOX/YT's website. links, information and more!">
-    <meta name="keywords" content="ChrisplayzBLOX/YT's website, ChrisplayzYT, ChrisplayzWii">
-    <meta name="author" content="ChrisplayzBLOX/YT">
+    <meta name="description" content="ChrisplayzWii's website. links, information and more!">
+    <meta name="keywords" content="ChrisplayzWii's website, ChrisplayzYT, ChrisplayzWii">
+    <meta name="author" content="ChrisplayzWii">
     <meta property="og:image" content="/chris.png" />
     <meta property="og:image:width" content="80" />
     <meta property="og:image:height" content="80" />
@@ -38,9 +38,11 @@
     scroll-behavior: smooth;
     font-family: 'Wii NTLG PGothic JPN Regular';
 }
-@font-face {
+  @font-face {
     font-family: 'Wii NTLG PGothic JPN Regular';
-    src: url(/font/font2.ttf);
+      /* wii shop font from: https://github.com/amarillonmc/MSE201_w_ygos10/blob/master/font/ZENTemplate/FOT-Rodin%20Pro%20M.ttf */
+      /* the closest font to wii shops font in google fonts is Noto Sans JP */
+    src: url(/font/FOT-Rodin\ Pro\ M.ttf);
   }
 ::selection {
   color: #323232;
