--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
     <title>ChrisplayzWii'S weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
     <meta name="description" content="ChrisplayzWii's website. links, information and more!">
-    <meta name="keywords" content="ChrisplayzWii's website, ChrisplayzBLOX, ChrisplayzYT, ChrisplayzWii">
+    <meta name="keywords" content="ChrisplayzWii's website, ChrisplayzYT, ChrisplayzWii">
     <meta name="author" content="ChrisplayzWii">
     <meta property="og:image" content="/chris.png" />
     <meta property="og:image:width" content="80" />
     <meta property="og:image:height" content="80" />
-    <link rel="stylesheet" href="/wiishopscrollbar/wiiscrollbar.css">
     <audio src="/bgm/Course World.mp3" autoplay="" ></audio>
 </head>
 
-<body id="mainpg" onload="stoploading();">
+<body  onload="stoploading();">
+
+<div id="backgroundpg">
+<!-- im just here to make the fade be black to black, not white to black if the page fails to load aswell -->
+</div>
+
+<div id="mainpage" >
 <img src="/images/background/star-spinning.gif" style="opacity:50%; max-width:50px; position:absolute; top:0; left:0;" alt="">
 <img src="/images/background/star-spinning.gif" style="opacity:50%; max-width:50px; position:absolute; top:0; right:0;" alt="">
 <img src="/images/background/star-spinning.gif" style="opacity:50%; max-width:50px; position:absolute; bottom:0; left:0;" alt="">
@@ -25,6 +30,8 @@
 <div id="details" style="border:none;">
 <h1 align="center">Websites undergoing maintenance</h1>
 <h3 align="center">Come back soon!</h3>
+</div>
+
 </div>
 
 
@@ -59,91 +66,37 @@ body {
     overflow-x: hidden; 
     overflow-y:auto;
     transition:.3s ease-in-out;
+    background-color: black;
+    color: white;
+}
+
+
+#backgroundpg {
+    background-color:black; 
+    position:absolute;
+    top:0; left:0;
+    width:100%;
+    height:100%;
+    z-index:1px;
+}
+#mainpage {
     animation: godown .5s;
-    opacity:100%;
-
-}
-#mainpg {
-    background-color:black;
-    color:white;
-}
-#borderleft {
-    position:absolute; top:0px; left:1.3%; z-index:-3px; width:13px; height:100%;
-}
-#borderright {
-    position:absolute; top:0px; right:1.3%; z-index:-3px; width:13px; height:100%;
-}
-
-#loadicon {
-    width:90px;
-    height:90px;
-    position:fixed;
-    top:0%;
-    left:0%;
-    overflow:hidden;
-    z-index:7;
-}
-
-  
-#wiiring {
-    animation: spinner 1.3s infinite ;
+    animation-fill-mode: forwards;
     transition:.3s ease-in-out;
-    filter: drop-shadow(3px 3px 4px rgba(0, 0, 0, 0.11));
+    color:white;
+    display:block;
+    background-color: black;
+    position:absolute;
+    top:0; left:0;
+    width:100%;
+    height:100%;
+    z-index:2px;
 }
-@keyframes spinner {
-    0% {transform: rotate(-150deg)}
-    100% {transform: rotate(150deg)};
-}
-
-
-/* mobile */
-
-@media only screen and (min-width:600px) {
-    #borderleft {
-        position:absolute; top:0px; left:1.3%; z-index:-3px; width:13px; height:100%;
-    }
-    #borderright {
-        position:absolute; top:0px; right:1.3%; z-index:-3px; width:13px; height:100%;
-    }
-    #loadicon {
-        left:2%;
-    }
-  }
-  
-  
-  /* computers */
-
-  @media only screen and (min-width: 1070px) {
-    #borderleft {
-        position:absolute; top:0px; left: 5.5em; z-index:-3px; width:13px; height:100%;
-    }
-    #loadicon {
-        left:0%;
-    }
-    #borderright {
-        position:absolute; top:0px; right: 5.5em; z-index:-3px; width:13px; height:100%;
-    }
-  }
-
-
-
-a {
-    color:#10799c;
-    cursor: url("/images/wiicursorremake_hover.png"), pointer;
-}
-a:hover {
-    color:#12a3d3;
-    cursor: url("/images/wiicursorremake_hover.png"), pointer;
-}
-hr {
-    border: 1px solid #838383;
-}
-
-
 
 @keyframes godown {
-    0% {margin-top:50px; opacity:0%;};
+    0% {opacity:0%;};
 }
+
 #details {
     margin:auto;
     width:90%;
@@ -161,43 +114,6 @@ hr {
 }
 
 
-
-/* other styles */
-button {
-    cursor: url("/images/wiicursorremake.png"), default;
-    background-color:#f6fdff;
-    outline:.1em solid #34beed;
-    border:none;
-    border-radius:6px;
-    padding:3px;
-    text-align:Center;
-    filter: drop-shadow(1px 1px 3.4px #c5c5c5);
-    box-shadow:inset 1px 1px 13px #74747427;
-	font-size: 18px;
-	color: #323232;
-	font-weight: normal;
-    overflow:hidden;
-    width:auto;
-    z-index:1;
-
- }
-button:hover {
-    cursor: url("/images/wiicursorremake_hover.png"), pointer;
-    background-color:#f6fdff;
-    outline:.2em solid #21bdf1; 
-    border:none;
-    border-radius:6px;
-    padding:3px;
-    text-align:Center;
-    filter: drop-shadow(1px 1px 3.4px #c5c5c5);
-    box-shadow:inset 1px 1px 13px #74747427;
-	font-size: 18px;
-	color: #323232;
-	font-weight: normal;
-    overflow:hidden;
-    width:auto;
-    z-index:1;
-    }
 
   
 
