--- a/oldwsvids.html
+++ b/oldwsvids.html
@@ -37,7 +37,7 @@
         <img src="/images/ring.png" style="display:flex; margin-top:2px; width:90px; height:90px;" id="wiiring" alt="">
         </div>
         
-
+<div id="noticc" style="background-color:#323232; color:#FFF; font-weight:bold; font-size:18px; text-align:center; width:100%; height:30px; display:block; position:relative; top:0; left:0; z-index:99999;">NOTICE: chrisplayzyt.github.io is currently undergoing some fixes, some design issues/bugs may occur.</div>
     <div id="details" style="text-align:center;" >
 
         <h1 style="font-weight:bolder;">My playlist of old Wii Shop Channel videos:</h1>
