--- a/oldwsvids.html
+++ b/oldwsvids.html
@@ -37,9 +37,11 @@
         <img src="/images/ring.png" style="display:flex; margin-top:2px; width:90px; height:90px;" id="wiiring" alt="">
         </div>
         
-<div id="noticc" style="background-color:#34BEED; color:#FFF; font-weight:bold; font-size:18px; text-align:center; width:100%; height:40px; padding-bottom:30px; display:block; position:relative; top:0; left:0; z-index:99999;">NOTICE: chrisplayzyt.github.io is currently undergoing some fixes, some design issues/bugs may occur.</div>
-    <div id="details" style="text-align:center;" >
+<!-- new updates or notices -->
+<div id="noticc" style="display:block;">NOTICE: chrisplayzyt.github.io is currently undergoing some fixes, some design issues/bugs may occur.</div>
+    <!-- new updates or notices -->
 
+    
         <h1 style="font-weight:bolder;">My playlist of old Wii Shop Channel videos:</h1>
 
         <iframe style="width:90%; height:360px; " src="https://www.youtube-nocookie.com/embed/videoseries?si=El044G5-i6YiyeYB&amp;list=PLd53BTyCk9Js_VDYDSRrc1Me_foRQKJe-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
