--- a/credits.html
+++ b/credits.html
@@ -51,8 +51,8 @@
             <a href="#">You</a> for visiting my website :D</h2>
 
             <h2 style="font-weight:bold; margin-top:30px; margin-bottom:30px;">
-                Credits for my beta wii video archive can be viewed here:
-                <a href="/betawii/credits.html" onclick="initloading();" onmouseover="wiihover();" target="_blank">Beta Wii Videos - Credits</a>
+                Credits/sources for my beta wii video archive can be viewed here:
+                <a href="https://betawii.github.io/credits.html" onclick="initloading();" onmouseover="wiihover();" target="_blank">Beta Wii archive - Credits</a>
              </h2>
 
                 <h2 style="font-weight:bold; margin-top:30px; margin-bottom:30px;">
