fix my yt link :(

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </style>
 </div>
 <!-- new updates or notices -->
-<div id="noticc" style="display:block;">NOTICE: chrisplayzyt.github.io is currently undergoing some fixes, some design issues/bugs may occur.</div>
+<div id="noticc" style="display:block; overflow-x:auto; overflow-y:hidden; ">NOTICE: chrisplayzyt.github.io is currently undergoing some fixes, some design issues/bugs may occur.</div>
     <!-- new updates or notices -->
 <div id="info" >
 
@@ -71,7 +71,7 @@
 
             <div id="box" style=" padding-left:3px; border-bottom:1px solid grey; margin-top:5px; display:block;">
                 <img src="/images/icons/youtube.png" style="  border-radius:15px; position:relative; top:0px; display:inline-block; width:40px; height:40px; max-width:40px; max-height:40px;" alt="">
-                <a href="https://www.youtube.com/@ChrisplayzBLOX?sub_confirmation=1" target="_blank" title="My YouTube!1!1"  onclick="initloading();" onmouseover="wiihover();" style="position:relative; top:-12px; left:3px;">
+                <a href="https://www.youtube.com/@ChrisplayzWii?sub_confirmation=1" target="_blank" title="My YouTube!1!1"  onclick="initloading();" onmouseover="wiihover();" style="position:relative; top:-12px; left:3px;">
                     Subscribe to my YouTube for random videos once in a while :)</a>
             
                     </div>
