--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </style>
 </div>
 <!-- new updates or notices -->
-<div id="noticc" style="display:block; overflow-x:auto; overflow-y:hidden; ">NOTICE: chrisplayzyt.github.io is currently undergoing some fixes, some design issues/bugs may occur.</div>
+<div id="noticc" style="display:block; overflow-x:auto; overflow-y:hidden; white-space:nowrap; ">NOTICE: chrisplayzyt.github.io is currently undergoing some fixes, some design issues/bugs may occur.</div>
     <!-- new updates or notices -->
 <div id="info" >
 
