--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChrisplayzWii'S weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
-    <meta name="description" content="ChrisplayzWii's website. links, information and more!">
-    <meta name="keywords" content="ChrisplayzWii's website, ChrisplayzYT, ChrisplayzWii">
+    <meta name="description" content="ChrisplayzWiis website is currently undergoing maintenance, check back later.">
+    <meta name="keywords" content="ChrisplayzWiis website, ChrisplayzWii's website, Chrisplayzwii">
     <meta name="author" content="ChrisplayzWii">
     <meta property="og:image" content="/chris.png" />
     <meta property="og:image:width" content="80" />
