--- a/404.html
+++ b/404.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0;url=index.html">
-    <title>.</title>
+    <title>...</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
-    <meta name="description" content="ChrisplayzWii's website. links, information and more!">
-    <meta name="keywords" content="ChrisplayzWii's website, ChrisplayzYT, ChrisplayzWii">
+    <meta name="description" content="ChrisplayzWiis website is currently undergoing maintenance, check back later.">
+    <meta name="keywords" content="ChrisplayzWiis website, ChrisplayzWii's website, Chrisplayzwii">
     <meta name="author" content="ChrisplayzWii">
     <meta property="og:image" content="/chris.png" />
     <meta property="og:image:width" content="80" />
