fix redirect issue in subfolders

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=index.html">
+    <meta http-equiv="refresh" content="0;url=https://chrisplayzwii.github.io/index.html">
     <title>...</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
     <meta name="description" content="ChrisplayzWiis website is currently undergoing maintenance, check back later.">
@@ -17,7 +17,7 @@
 <a href="index.html" style="position:absolute; top:0; left:0; width:100%; height:100%; background-color:black;"></a>
 
     <noscript>
-        <meta http-equiv="refresh" content="0;url=index.html">
+        <meta http-equiv="refresh" content="0;url=https://chrisplayzwii.github.io/index.html">
     </noscript>
 </body>
 </html>
