update typo lol

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChrisplayzWii'S weblinks</title>
+    <title>ChrisplayzWiis weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
     <meta name="description" content="ChrisplayzWiis website is currently undergoing maintenance, check back later.">
     <meta name="keywords" content="ChrisplayzWiis website, ChrisplayzWii's website, Chrisplayzwii">
