--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="/chris.png" />
     <meta property="og:image:width" content="80" />
     <meta property="og:image:height" content="80" />
-    <audio src="/bgm/Course World.mp3" autoplay="" ></audio>
+    <audio src="/bgm/switch2firstsetup.mp3" autoplay="" ></audio>
 </head>
 
 <body  onload="stoploading();">
