--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChrisplayzWiis weblinks</title>
     <link rel="shortcut icon" href="/chris.png" type="image/x-icon">
-    <meta name="description" content="ChrisplayzWiis website is currently undergoing maintenance, check back later.">
+    <meta name="description" content="ChrisplayzWiis website is undergoing bug fixes and a redesign, check back later.">
     <meta name="keywords" content="ChrisplayzWiis website, ChrisplayzWii's website, Chrisplayzwii">
     <meta name="author" content="ChrisplayzWii">
     <meta property="og:image" content="/chris.png" />
@@ -28,8 +28,8 @@
 <img src="/images/background/star-spinning.gif" style="opacity:50%; max-width:50px; position:absolute; bottom:0; right:0;" alt="">
 
 <div id="details" style="border:none;">
-<h1 align="center">Websites undergoing maintenance</h1>
-<h3 align="center">Come back soon!</h3>
+<h1 align="center">Websites undergoing a redesign</h1>
+<h3 align="center">Check back later.</h3>
 </div>
 
 </div>
@@ -40,8 +40,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-weight:normal;
-    cursor: url("/images/wiicursorremake.png"), default;
+    font-weight:normal; 
+    cursor:default;
     scroll-behavior: smooth;
     font-family: 'Wii NTLG PGothic JPN Regular';
 }
