--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="keywords" content="ChrisplayzWiis website, ChrisplayzWii's website, Chrisplayzwii">
     <meta name="author" content="ChrisplayzWii">
     <meta property="og:image" content="/chris.png" />
-    <meta property="og:image:width" content="80" />
-    <meta property="og:image:height" content="80" />
-    <audio src="/bgm/switch2firstsetup.mp3" autoplay="" ></audio>
+    <meta property="og:image:width" content="50" />
+    <meta property="og:image:height" content="50" />
+    <audio src="/bgm/switch2firstsetup.mp3" autoplay="" id="maintbgm" ></audio>
 </head>
 
 <body  onload="stoploading();">
@@ -22,10 +22,10 @@
 </div>
 
 <div id="mainpage" >
-<img src="/images/background/star-spinning.gif" style="opacity:50%; max-width:50px; position:absolute; top:0; left:0;" alt="">
-<img src="/images/background/star-spinning.gif" style="opacity:50%; max-width:50px; position:absolute; top:0; right:0;" alt="">
-<img src="/images/background/star-spinning.gif" style="opacity:50%; max-width:50px; position:absolute; bottom:0; left:0;" alt="">
-<img src="/images/background/star-spinning.gif" style="opacity:50%; max-width:50px; position:absolute; bottom:0; right:0;" alt="">
+<img src="/images/background/star-spinning.gif" onclick="document.getElementById('maintbgm').play(); document.getElementById('maintbgm').volume = 0.5;" class="star" style="top:0; left:0;" alt="mariostar"     title="clicktoplaymusic (switch-2-setup-bgm)">
+<img src="/images/background/star-spinning.gif" onclick="document.getElementById('maintbgm').play(); document.getElementById('maintbgm').volume = 0.5;" class="star" style="top:0; right:0;" alt="mariostar"    title="clicktoplaymusic (switch-2-setup-bgm)">
+<img src="/images/background/star-spinning.gif" onclick="document.getElementById('maintbgm').play(); document.getElementById('maintbgm').volume = 0.5;" class="star" style="bottom:0; left:0;" alt="mariostar"  title="clicktoplaymusic (switch-2-setup-bgm)">
+<img src="/images/background/star-spinning.gif" onclick="document.getElementById('maintbgm').play(); document.getElementById('maintbgm').volume = 0.5;" class="star" style="bottom:0; right:0;" alt="mariostar" title="clicktoplaymusic (switch-2-setup-bgm)">
 
 <div id="details" style="border:none;">
 <h1 align="center">Websites undergoing a redesign</h1>
@@ -43,10 +43,13 @@
     font-weight:normal; 
     cursor:default;
     scroll-behavior: smooth;
-    font-family: 'Wii NTLG PGothic JPN Regular';
+    font-family: 'Wii NTLG PGothic JPN Regular', 'Noto Sans JP';
 }
+	.star {
+		opacity:50%; max-width:50px; position:absolute;
+	}
   @font-face {
-    font-family: 'Wii NTLG PGothic JPN Regular';
+    font-family: 'Wii NTLG PGothic JPN Regular', 'Noto Sans JP';
       /* wii shop font from: https://github.com/amarillonmc/MSE201_w_ygos10/blob/master/font/ZENTemplate/FOT-Rodin%20Pro%20M.ttf */
       /* the closest font to wii shops font in google fonts is Noto Sans JP */
     src: url(/font/FOT-Rodin\ Pro\ M.ttf);
