--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		opacity:50%; max-width:50px; position:absolute;
 	}
   @font-face {
-    font-family: 'Wii NTLG PGothic JPN Regular', 'Noto Sans JP';
+    font-family: 'Wii NTLG PGothic JPN Regular';
       /* wii shop font from: https://github.com/amarillonmc/MSE201_w_ygos10/blob/master/font/ZENTemplate/FOT-Rodin%20Pro%20M.ttf */
       /* the closest font to wii shops font in google fonts is Noto Sans JP */
     src: url(/font/FOT-Rodin\ Pro\ M.ttf);
