--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <audio src="/bgm/switch2firstsetup.mp3" autoplay="" id="maintbgm" ></audio>
 </head>
 
-<body  onload="stoploading();">
+<body  onload="document.getElementById('maintbgm').volume = 0.5;">
 
 <div id="backgroundpg">
 <!-- im just here to make the fade be black to black, not white to black if the page fails to load aswell -->
 </div>
 
 <div id="mainpage" >
-<img src="/images/background/star-spinning.gif" onclick="document.getElementById('maintbgm').play(); document.getElementById('maintbgm').volume = 0.5;" class="star" style="top:0; left:0;" alt="mariostar"     title="clicktoplaymusic (switch-2-setup-bgm)">
-<img src="/images/background/star-spinning.gif" onclick="document.getElementById('maintbgm').play(); document.getElementById('maintbgm').volume = 0.5;" class="star" style="top:0; right:0;" alt="mariostar"    title="clicktoplaymusic (switch-2-setup-bgm)">
-<img src="/images/background/star-spinning.gif" onclick="document.getElementById('maintbgm').play(); document.getElementById('maintbgm').volume = 0.5;" class="star" style="bottom:0; left:0;" alt="mariostar"  title="clicktoplaymusic (switch-2-setup-bgm)">
-<img src="/images/background/star-spinning.gif" onclick="document.getElementById('maintbgm').play(); document.getElementById('maintbgm').volume = 0.5;" class="star" style="bottom:0; right:0;" alt="mariostar" title="clicktoplaymusic (switch-2-setup-bgm)">
+<img src="/images/background/star-spinning.gif" onclick="document.getElementById('maintbgm').play();" class="star" style="top:0; left:0;" alt="mariostar"     title="clicktoplaymusic (switch-2-setup-bgm)">
+<img src="/images/background/star-spinning.gif" onclick="document.getElementById('maintbgm').play();" class="star" style="top:0; right:0;" alt="mariostar"    title="clicktoplaymusic (switch-2-setup-bgm)">
+<img src="/images/background/star-spinning.gif" onclick="document.getElementById('maintbgm').play();" class="star" style="bottom:0; left:0;" alt="mariostar"  title="clicktoplaymusic (switch-2-setup-bgm)">
+<img src="/images/background/star-spinning.gif" onclick="document.getElementById('maintbgm').play();" class="star" style="bottom:0; right:0;" alt="mariostar" title="clicktoplaymusic (switch-2-setup-bgm)">
 
 <div id="details" style="border:none;">
 <h1 align="center">Websites undergoing a redesign</h1>
