--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     scroll-behavior: smooth;
     font-family: 'Wii NTLG PGothic JPN Regular', 'Noto Sans JP';
 }
+	@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap');
+	
 	.star {
 		opacity:50%; max-width:50px; position:absolute;
 	}
