--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <audio src="/bgm/switch2firstsetup.mp3" autoplay="" id="maintbgm" ></audio>
 </head>
 
-<body  onload="document.getElementById('maintbgm').volume = 0.5;">
-
+<body  onmouseover="re();">
+<script>function re() {document.getElementById('maintbgm').volume = 0.5;};</script>
 <div id="backgroundpg">
 <!-- im just here to make the fade be black to black, not white to black if the page fails to load aswell -->
 </div>
