--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <audio src="/bgm/switch2firstsetup.mp3" autoplay="" id="maintbgm" ></audio>
 </head>
 
-<body  onmouseover="re();">
+<body  onmouseover="re();" onload="re();" onmousedown="re();">
 <script>function re() {document.getElementById('maintbgm').volume = 0.5;};</script>
 <div id="backgroundpg">
 <!-- im just here to make the fade be black to black, not white to black if the page fails to load aswell -->
